added more context in the memory bank folder
