# src/main/kotlin/com/url/shortner/controllers/UrlController.kt
@@ -1,9 +1,9 @@
 package com.url.shortner.controllers
 
-import com.url.shortner.services.UrlService
 import com.url.shortener.generated.api.URLsApi
 import com.url.shortener.generated.model.CreateUrlRequest
 import com.url.shortener.generated.model.UrlResponse
+import com.url.shortner.services.RedirectService
 import com.url.shortener.generated.model.CreateUrlRequest as GeneratedCreateUrlRequest
 import com.url.shortener.generated.model.UrlResponse as GeneratedUrlResponse
 import org.springframework.http.HttpStatus
@@ -17,7 +17,8 @@ import java.time.ZoneOffset
 
 @RestController
 class UrlController(
-    private val urlService: UrlService
+    private val urlService: UrlService,
+    private val redirectService: RedirectService
 ) : URLsApi {
 
     override fun createShortUrl(createUrlRequest: CreateUrlRequest): ResponseEntity<UrlResponse> {
@@ -30,9 +31,20 @@ class UrlController(
             .status(HttpStatus.CREATED)
             .body(
                 UrlResponse(
-                    shortUrl = "http://localhost:8080/urls/${result.shortCode}",
+                    shortUrl = "http://localhost:8080/api/v1/${result.shortCode}",
                     originalUrl = result.originalUrl,
                     expiresAt = result.expiresAt?.let { OffsetDateTime.of(it, ZoneOffset.UTC) }
             ))
+    }
+
+    override fun redirectToLongUrl(shortUrl: String): ResponseEntity<Unit> {
+        val longUrl = redirectService.getLongUrl(shortUrl)
+        return if (longUrl != null) {
+            ResponseEntity.status(HttpStatus.FOUND)
+                .location(URI.create(longUrl))
+                .build()
+        } else {
+            ResponseEntity.status(HttpStatus.NOT_FOUND).build()
+        }
     }
 }
